5MLRE: Collaborative filtering: Ran the model a second time with more data

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "data_cleaned = pandas.read_csv((DATA_FOLDER / \"rating_cleaned.csv\"))\n",
     "data_filtered = data_cleaned[data_cleaned[\"rating\"] >= 0.0]\n",
-    "data_shortened = data_filtered.sample(n=100_000)\n",
+    "data_shortened = data_filtered.sample(n=35_000)\n",
     "\n",
     "data_reader = surprise.Reader(rating_scale=(1, 10))\n",
     "data = surprise.Dataset.load_from_df(df=data_shortened[[\"user_id\", \"anime_id\", \"rating\"]], reader=data_reader)"
@@ -304,196 +304,214 @@
       "\u001B[32mTesting \"Slope One\".\u001B[39m\n",
       "\u001B[0m\n",
       "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m[]\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.0000 | test = 1.6306 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.0000 | test = 1.2816 ]\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 0.0409 | test = 1.7801 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.0039 | test = 1.3233 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 25.586854%\n",
+      "\u001B[1mHit rate:\u001B[22m 91.862405%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "4.0\t28.571429%\n",
-      "5.0\t36.363636%\n",
-      "6.0\t10.909091%\n",
-      "7.0\t17.894737%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 25.653207%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0034823443310215306\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 0.9812206572769953\n",
+      "1.0\t73.684211%\n",
+      "2.0\t81.250000%\n",
+      "3.0\t88.000000%\n",
+      "4.0\t81.954887%\n",
+      "5.0\t84.042553%\n",
+      "6.0\t84.962406%\n",
+      "7.0\t91.191417%\n",
+      "8.0\t94.242864%\n",
+      "9.0\t94.691440%\n",
+      "10.0\t94.412331%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 91.976593%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0058179707222422855\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 0.9975612886664099\n",
       "\n",
-      "Testing of the \"Slope One\" model successfully completed in 0:00:01.474861.\n",
+      "Testing of the \"Slope One\" model successfully completed in 0:03:02.444310.\n",
       "Grid search: N/A\n",
-      "Training and testing: 0:00:01.208360\n",
+      "Training and testing: 0:02:32.718694\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"KNN Basic\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
-      "Computing the cosine similarity matrix...\n",
+      "Computing the pearson similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "\u001B[0m\n",
-      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'cosine', 'user_based': True}}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.4416 | test = 1.5344 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.1633 | test = 1.2512 ]\n",
+      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'pearson', 'user_based': True}}\u001B[0m\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 0.0686 | test = 1.5617 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.0033 | test = 1.2424 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 26.056338%\n",
+      "\u001B[1mHit rate:\u001B[22m 92.786549%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "4.0\t28.571429%\n",
-      "5.0\t36.363636%\n",
-      "6.0\t12.727273%\n",
-      "7.0\t18.947368%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 26.128266%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.003495852081539578\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 1.0\n",
+      "1.0\t94.736842%\n",
+      "2.0\t93.750000%\n",
+      "3.0\t90.000000%\n",
+      "4.0\t84.210526%\n",
+      "5.0\t85.372340%\n",
+      "6.0\t86.090226%\n",
+      "7.0\t92.264257%\n",
+      "8.0\t94.775036%\n",
+      "9.0\t95.288653%\n",
+      "10.0\t95.086705%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 92.795839%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.004430055663239197\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 1.0\n",
       "\n",
-      "Testing of the \"KNN Basic\" model successfully completed in 0:02:44.174949.\n",
-      "Grid search: 0:02:42.349682\n",
-      "Training and testing: 0:00:01.561016\n",
+      "Testing of the \"KNN Basic\" model successfully completed in 1:14:21.718216.\n",
+      "Grid search: 1:07:36.213572\n",
+      "Training and testing: 0:06:11.351870\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"KNN With Means\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
-      "Computing the cosine similarity matrix...\n",
+      "Computing the pearson similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "\u001B[0m\n",
-      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'cosine', 'user_based': False}}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.1072 | test = 1.6964 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.0231 | test = 1.3698 ]\n",
+      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 2, 'sim_options': {'name': 'pearson', 'user_based': False}}\u001B[0m\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 1.2391 | test = 1.5829 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.9067 | test = 1.2118 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 25.352113%\n",
+      "\u001B[1mHit rate:\u001B[22m 92.645360%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "5.0\t31.818182%\n",
-      "6.0\t12.727273%\n",
-      "7.0\t18.947368%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 25.415677%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0056793552610392125\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 1.0\n",
+      "1.0\t89.473684%\n",
+      "2.0\t93.750000%\n",
+      "3.0\t90.000000%\n",
+      "4.0\t83.458647%\n",
+      "5.0\t84.574468%\n",
+      "6.0\t86.090226%\n",
+      "7.0\t92.094862%\n",
+      "8.0\t94.726657%\n",
+      "9.0\t95.155939%\n",
+      "10.0\t95.086705%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 92.665800%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0017454751078758823\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 1.0\n",
       "\n",
-      "Testing of the \"KNN With Means\" model successfully completed in 0:03:21.973250.\n",
-      "Grid search: 0:03:20.081562\n",
-      "Training and testing: 0:00:01.611366\n",
+      "Testing of the \"KNN With Means\" model successfully completed in 1:16:12.440366.\n",
+      "Grid search: 1:10:28.676082\n",
+      "Training and testing: 0:05:02.423471\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"KNN With Z-Score\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
-      "Computing the cosine similarity matrix...\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "\u001B[0m\n",
-      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'cosine', 'user_based': False}}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.1613 | test = 1.6964 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.0373 | test = 1.3698 ]\n",
+      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'pearson_baseline', 'user_based': False}}\u001B[0m\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 0.0007 | test = 1.5827 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.0000 | test = 1.2117 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 25.352113%\n",
+      "\u001B[1mHit rate:\u001B[22m 92.645360%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "5.0\t31.818182%\n",
-      "6.0\t12.727273%\n",
-      "7.0\t18.947368%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 25.415677%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0056793552610392125\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 1.0\n",
+      "1.0\t89.473684%\n",
+      "2.0\t93.750000%\n",
+      "3.0\t90.000000%\n",
+      "4.0\t83.458647%\n",
+      "5.0\t84.574468%\n",
+      "6.0\t86.090226%\n",
+      "7.0\t92.094862%\n",
+      "8.0\t94.726657%\n",
+      "9.0\t95.155939%\n",
+      "10.0\t95.086705%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 92.665800%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.001787238463911233\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 1.0\n",
       "\n",
-      "Testing of the \"KNN With Z-Score\" model successfully completed in 0:04:59.461941.\n",
-      "Grid search: 0:04:57.553892\n",
-      "Training and testing: 0:00:01.636250\n",
+      "Testing of the \"KNN With Z-Score\" model successfully completed in 1:27:21.148576.\n",
+      "Grid search: 1:21:14.354126\n",
+      "Training and testing: 0:05:27.115908\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"KNN Baseline\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
       "Estimating biases using als...\n",
-      "Computing the cosine similarity matrix...\n",
+      "Computing the pearson similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "\u001B[0m\n",
-      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'cosine', 'user_based': True}, 'bsl_options': {'method': 'als', 'n_epochs': 5}}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.4104 | test = 1.4846 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.1517 | test = 1.2044 ]\n",
+      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'k': 20, 'min_k': 1, 'sim_options': {'name': 'pearson', 'user_based': True}, 'bsl_options': {'method': 'als', 'n_epochs': 15}}\u001B[0m\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 0.0600 | test = 1.4589 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.0028 | test = 1.1303 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 26.056338%\n",
+      "\u001B[1mHit rate:\u001B[22m 92.786549%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "4.0\t28.571429%\n",
-      "5.0\t36.363636%\n",
-      "6.0\t12.727273%\n",
-      "7.0\t18.947368%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 26.128266%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.010923151099509426\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 1.0\n",
+      "1.0\t94.736842%\n",
+      "2.0\t93.750000%\n",
+      "3.0\t90.000000%\n",
+      "4.0\t84.210526%\n",
+      "5.0\t85.372340%\n",
+      "6.0\t86.090226%\n",
+      "7.0\t92.264257%\n",
+      "8.0\t94.775036%\n",
+      "9.0\t95.288653%\n",
+      "10.0\t95.086705%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 92.795839%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.011860764933654898\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 1.0\n",
       "\n",
-      "Testing of the \"KNN Baseline\" model successfully completed in 0:08:49.294691.\n",
-      "Grid search: 0:08:47.283735\n",
-      "Training and testing: 0:00:01.718732\n",
+      "Testing of the \"KNN Baseline\" model successfully completed in 3:24:06.957985.\n",
+      "Grid search: 3:15:57.948095\n",
+      "Training and testing: 0:07:27.592760\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"Non-negative Matrix Factorization\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
       "\u001B[0m\n",
       "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'n_factors': 5, 'n_epochs': 25, 'biased': True}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 0.9902 | test = 1.4757 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 0.5343 | test = 1.2040 ]\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 0.8715 | test = 1.4887 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.5367 | test = 1.1429 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 26.056338%\n",
+      "\u001B[1mHit rate:\u001B[22m 92.786549%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "4.0\t28.571429%\n",
-      "5.0\t36.363636%\n",
-      "6.0\t12.727273%\n",
-      "7.0\t18.947368%\n",
-      "8.0\t33.644860%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t27.659574%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 26.128266%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.004562978369223918\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 1.0\n",
+      "1.0\t94.736842%\n",
+      "2.0\t93.750000%\n",
+      "3.0\t90.000000%\n",
+      "4.0\t84.210526%\n",
+      "5.0\t85.372340%\n",
+      "6.0\t86.090226%\n",
+      "7.0\t92.264257%\n",
+      "8.0\t94.775036%\n",
+      "9.0\t95.288653%\n",
+      "10.0\t95.086705%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 92.795839%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.004240206611148355\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 1.0\n",
       "\n",
-      "Testing of the \"Non-negative Matrix Factorization\" model successfully completed in 0:01:08.579892.\n",
-      "Grid search: 0:01:06.688111\n",
-      "Training and testing: 0:00:01.594693\n",
+      "Testing of the \"Non-negative Matrix Factorization\" model successfully completed in 0:10:31.082981.\n",
+      "Grid search: 0:05:22.312578\n",
+      "Training and testing: 0:04:23.231577\n",
       "\u001B[2m\u001B[37m=========================\u001B[0m\n",
       "\u001B[32mTesting \"Co-clustering\".\u001B[39m\n",
       "Running GridSearchCV...\u001B[37m\u001B[2m\n",
       "\u001B[0m\n",
-      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'n_cltr_u': 3, 'n_cltr_i': 3, 'n_epochs': 30}\u001B[0m\n",
-      "\u001B[1mRMSE:\u001B[22m [train = 1.3504 | test = 1.7743 ]\n",
-      "\u001B[1mMAE:\u001B[22m [train = 1.0155 | test = 1.3993 ]\n",
+      "\u001B[1mBest params:\u001B[22m \u001B[2m\u001B[37m{'n_cltr_u': 3, 'n_cltr_i': 3, 'n_epochs': 20}\u001B[0m\n",
+      "\u001B[1mRMSE:\u001B[22m [ train = 1.0833 | test = 1.7708 ]\n",
+      "\u001B[1mMAE:\u001B[22m [train = 0.8393 | test = 1.3425 ]\n",
       "\n",
       "Built top-N for each user (n=10, min_rating=4.0)\n",
-      "\u001B[1mHit rate:\u001B[22m 23.474178%\n",
+      "\u001B[1mHit rate:\u001B[22m 90.720062%\n",
       "\u001B[1mHit rate per rating value:\u001B[22m\n",
       "Rating\tHit rate\n",
-      "2.0\t50.000000%\n",
-      "5.0\t27.272727%\n",
-      "6.0\t9.090909%\n",
-      "7.0\t17.894737%\n",
-      "8.0\t30.841121%\n",
-      "9.0\t29.545455%\n",
-      "10.0\t25.531915%\n",
-      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 23.515439%\n",
-      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.0049092441904994115\n",
-      "\u001B[1mUser coverage (num_users=426, min_rating=4.0):\u001B[22m 0.9976525821596244\n",
+      "1.0\t63.157895%\n",
+      "2.0\t71.875000%\n",
+      "3.0\t82.000000%\n",
+      "4.0\t73.684211%\n",
+      "5.0\t78.191489%\n",
+      "6.0\t83.082707%\n",
+      "7.0\t90.231508%\n",
+      "8.0\t93.807450%\n",
+      "9.0\t94.359655%\n",
+      "10.0\t94.219653%\n",
+      "\u001B[1mCumulative hit rate (min_rating=4.0):\u001B[22m 90.923277%\n",
+      "\u001B[1mAverage reciprocal hit rate:\u001B[22m 0.003061056874511275\n",
+      "\u001B[1mUser coverage (num_users=7791, min_rating=4.0):\u001B[22m 0.998331408034912\n",
       "\n",
-      "Testing of the \"Co-clustering\" model successfully completed in 0:03:09.797717.\n",
-      "Grid search: 0:03:08.240986\n",
-      "Training and testing: 0:00:01.275005\n"
+      "Testing of the \"Co-clustering\" model successfully completed in 0:18:58.181833.\n",
+      "Grid search: 0:13:53.481299\n",
+      "Training and testing: 0:04:25.118431\n"
      ]
     }
    ],
