5MLRE: Collaborative filtering: Added a line to define random seed at beginning

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -58,6 +58,10 @@
     "from pathlib import Path\n",
     "from timeit import default_timer as timer\n",
     "from datetime import timedelta\n",
+    "import random\n",
+    "\n",
+    "# Math\n",
+    "import numpy\n",
     "\n",
     "# Data\n",
     "import pandas\n",
@@ -156,6 +160,18 @@
     "### B.1 - Splitting the dataset\n",
     "**TODO: Add text**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "random.seed(RANDOM_STATE)\n",
+    "numpy.random.seed(RANDOM_STATE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
