5MLRE: Collaborative filtering: Typo fix

--- a/5MLRE/Project/notebooks/en/4-Appendix.ipynb
+++ b/5MLRE/Project/notebooks/en/4-Appendix.ipynb
@@ -13,10 +13,10 @@
     "- PAWLOWSKI Maxence\n",
     "\n",
     "### Main index\n",
-    "1. **Data analysis (you are here)**\n",
+    "1. Data analysis\n",
     "2. Collaborative filtering\n",
     "3. Content-based filtering\n",
-    "4. _Appendix_"
+    "4. **_Appendix_ (you are here)**"
    ],
    "metadata": {
     "collapsed": false
