--- a/5MLRE/Project/notebooks/en/3-Content-Based_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/3-Content-Based_filtering.ipynb
@@ -73,6 +73,9 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "# Console output\n",
+    "from colorama import Fore\n",
+    "\n",
     "# Misc.\n",
     "from ast import literal_eval\n",
     "\n",
@@ -448,6 +451,7 @@
    "source": [
     "expliquer pourquoi pas de y\n",
     "expliquer pourquoi cosine et pas minkowski\n",
+    "expliquer n=11\n",
     "\n",
     "..."
    ],
@@ -468,6 +472,88 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "data_ratings = pandas.read_csv((DATA_FOLDER / \"rating.csv\"), dtype={\"user_id\": int, \"anime_id\": int, \"rating\": float})"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "outputs": [],
+   "source": [
+    "def get_best_rated_anime(user_id: int, df: pandas.DataFrame) -> int | None:\n",
+    "    \"\"\"\n",
+    "        Returns the index of the best rated anime by this user.\n",
+    "        **It does NOT return the anime identifier, only the index relative to the DataFrame.**\n",
+    "        It may return None if the user has no rating.\n",
+    "    \"\"\"\n",
+    "    user_ratings = df.loc[df[\"user_id\"] == user_id]\n",
+    "    user_ratings = user_ratings[user_ratings[\"rating\"] >= 0]\n",
+    "\n",
+    "    if len(user_ratings) == 0:  # If the user hasn't rated any item\n",
+    "        return None\n",
+    "    else:  # Get the best rated item\n",
+    "        user_ratings.sort_values(by=\"rating\", ascending=False)\n",
+    "        user_ratings = user_ratings.loc[user_ratings[\"rating\"] == max(user_ratings[\"rating\"])]\n",
+    "        random_item = user_ratings.sample(n=1)\n",
+    "\n",
+    "        return int(random_item.index[0])\n",
+    "\n",
+    "\n",
+    "def get_top_n_of(user_id: int, df: pandas.DataFrame, df_ratings: pandas.DataFrame, indices_arr: numpy.ndarray) -> pandas.DataFrame:\n",
+    "    anime_idx = get_best_rated_anime(user_id=user_id, df=df_ratings)\n",
+    "\n",
+    "    if anime_idx is not None:\n",
+    "        related_anime = []\n",
+    "\n",
+    "        for related_anime_idx in indices_arr[anime_idx][1:]:\n",
+    "            related_anime.append(df.iloc[related_anime_idx].to_dict())\n",
+    "\n",
+    "        return pandas.DataFrame(related_anime)\n",
+    "    else:\n",
+    "        print(f\"{Fore.YELLOW}Cannot build the Top-N: The user has not rated any anime.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   anime_id                           name  \\\n0     23251            Gugure! Kokkuri-san   \n1     32648                      Handa-kun   \n2      8557          Shinryaku! Ika Musume   \n3     10378         Shinryaku!? Ika Musume   \n4     31636                  Dagashi Kashi   \n5     31953                      New Game!   \n6     21273    Gochuumon wa Usagi Desu ka?   \n7     20847           Seitokai Yakuindomo*   \n8     18497  Yozakura Quartet: Hana no Uta   \n9      4548               Yozakura Quartet   \n\n                                               genre  \\\n0                      Comedy, Shounen, Supernatural   \n1                     Comedy, Shounen, Slice of Life   \n2                     Comedy, Shounen, Slice of Life   \n3                     Comedy, Shounen, Slice of Life   \n4                     Comedy, Shounen, Slice of Life   \n5                              Comedy, Slice of Life   \n6                              Comedy, Slice of Life   \n7             Comedy, School, Shounen, Slice of Life   \n8  Action, Comedy, Magic, Shounen, Super Power, S...   \n9  Action, Comedy, Magic, Shounen, Super Power, S...   \n\n                                         genre_split type  episodes  rating  \\\n0                    [Comedy, Shounen, Supernatural]   TV        12    7.69   \n1                   [Comedy, Shounen, Slice of Life]   TV        12    7.46   \n2                   [Comedy, Shounen, Slice of Life]   TV        12    7.60   \n3                   [Comedy, Shounen, Slice of Life]   TV        12    7.62   \n4                   [Comedy, Shounen, Slice of Life]   TV        12    6.73   \n5                            [Comedy, Slice of Life]   TV        12    7.81   \n6                            [Comedy, Slice of Life]   TV        12    7.60   \n7           [Comedy, School, Shounen, Slice of Life]   TV        13    7.84   \n8  [Action, Comedy, Magic, Shounen, Super Power, ...   TV        13    7.61   \n9  [Action, Comedy, Magic, Shounen, Super Power, ...   TV        12    6.96   \n\n   members  num_ratings  rank_avg_rating  rank_num_ratings  \n0    87824         1929           1201.0             888.0  \n1    69621          814           1891.5            1680.0  \n2    95242         2847           1426.0             592.0  \n3    45613         1467           1365.0            1105.0  \n4   145468         2015           5172.5             857.0  \n5    91932         1303            938.0            1229.5  \n6    82999         1416           1426.0            1146.0  \n7    98544         2665            883.0             638.5  \n8    58245         1185           1392.0            1317.5  \n9    68023         1437           4044.0            1124.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>anime_id</th>\n      <th>name</th>\n      <th>genre</th>\n      <th>genre_split</th>\n      <th>type</th>\n      <th>episodes</th>\n      <th>rating</th>\n      <th>members</th>\n      <th>num_ratings</th>\n      <th>rank_avg_rating</th>\n      <th>rank_num_ratings</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>23251</td>\n      <td>Gugure! Kokkuri-san</td>\n      <td>Comedy, Shounen, Supernatural</td>\n      <td>[Comedy, Shounen, Supernatural]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.69</td>\n      <td>87824</td>\n      <td>1929</td>\n      <td>1201.0</td>\n      <td>888.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>32648</td>\n      <td>Handa-kun</td>\n      <td>Comedy, Shounen, Slice of Life</td>\n      <td>[Comedy, Shounen, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.46</td>\n      <td>69621</td>\n      <td>814</td>\n      <td>1891.5</td>\n      <td>1680.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8557</td>\n      <td>Shinryaku! Ika Musume</td>\n      <td>Comedy, Shounen, Slice of Life</td>\n      <td>[Comedy, Shounen, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.60</td>\n      <td>95242</td>\n      <td>2847</td>\n      <td>1426.0</td>\n      <td>592.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10378</td>\n      <td>Shinryaku!? Ika Musume</td>\n      <td>Comedy, Shounen, Slice of Life</td>\n      <td>[Comedy, Shounen, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.62</td>\n      <td>45613</td>\n      <td>1467</td>\n      <td>1365.0</td>\n      <td>1105.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>31636</td>\n      <td>Dagashi Kashi</td>\n      <td>Comedy, Shounen, Slice of Life</td>\n      <td>[Comedy, Shounen, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>6.73</td>\n      <td>145468</td>\n      <td>2015</td>\n      <td>5172.5</td>\n      <td>857.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>31953</td>\n      <td>New Game!</td>\n      <td>Comedy, Slice of Life</td>\n      <td>[Comedy, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.81</td>\n      <td>91932</td>\n      <td>1303</td>\n      <td>938.0</td>\n      <td>1229.5</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>21273</td>\n      <td>Gochuumon wa Usagi Desu ka?</td>\n      <td>Comedy, Slice of Life</td>\n      <td>[Comedy, Slice of Life]</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>7.60</td>\n      <td>82999</td>\n      <td>1416</td>\n      <td>1426.0</td>\n      <td>1146.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>20847</td>\n      <td>Seitokai Yakuindomo*</td>\n      <td>Comedy, School, Shounen, Slice of Life</td>\n      <td>[Comedy, School, Shounen, Slice of Life]</td>\n      <td>TV</td>\n      <td>13</td>\n      <td>7.84</td>\n      <td>98544</td>\n      <td>2665</td>\n      <td>883.0</td>\n      <td>638.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>18497</td>\n      <td>Yozakura Quartet: Hana no Uta</td>\n      <td>Action, Comedy, Magic, Shounen, Super Power, S...</td>\n      <td>[Action, Comedy, Magic, Shounen, Super Power, ...</td>\n      <td>TV</td>\n      <td>13</td>\n      <td>7.61</td>\n      <td>58245</td>\n      <td>1185</td>\n      <td>1392.0</td>\n      <td>1317.5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>4548</td>\n      <td>Yozakura Quartet</td>\n      <td>Action, Comedy, Magic, Shounen, Super Power, S...</td>\n      <td>[Action, Comedy, Magic, Shounen, Super Power, ...</td>\n      <td>TV</td>\n      <td>12</td>\n      <td>6.96</td>\n      <td>68023</td>\n      <td>1437</td>\n      <td>4044.0</td>\n      <td>1124.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_top_n_of(user_id=9, df=data_anime, df_ratings=data_ratings, indices_arr=indices)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
