5MLRE: Content-based filtering / Appendix : Typo fix

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -1199,20 +1199,17 @@
    "metadata": {},
    "source": [
     "# B - Collaborative filtering: unfiltered training\n",
-    "Collaborative filtering  is a method used to make personalized recommendations by analyzing a user's past preferences or behaviors and comparing them with those of similar users. If people share similar tastes, the system will recommend items liked by one to the other.\n",
+    "As we explained earlier, Collaborative filtering is a method used to make personalized recommendations by analyzing a user's past preferences or behaviors and comparing them to those of similar users. There are two sub-techniques: User-based collaborative filtering and article-based collaborative filtering.\n",
     "\n",
-    "User-based terminology focusses on finding similar users that are looking like the target user in terms of preferences, liked items and user's navigation.\n",
+    "- User-based: focuses on finding similar users that are looking like the target user in terms of preferences, liked items and user's navigation.\n",
+    "- Item-based: focuses on finding similar items based on the user's previous interactions with other items.\n",
     "\n",
-    "Item-based terminology focusses on finding similar items (anime in our context) according to the items the user's previously interactions with other items.\n",
+    "User-based is more relevant for entertainment-related items, as this approach would recommend items that other users with similar preferences have liked. There are a lot of parameters in terms of preference nuances. Item-based recommendations are more pertinent to online shops, which recommend products based on their characteristics. We are talking about individual tastes here.\n",
     "\n",
-    "User-based is more relevant on movie platforms because this approach would recommend movies that other users with similar preferences liked. There are a lot of parameters in terms of preference nuances.\n",
-    "\n",
-    "Item-based is more relevant on online stores for products recommandations based on their caracteristics. We are talking here about individual tastes.\n",
-    "\n",
-    "In this project, our training model is using both of these methods for training purposes.\n",
+    "In our case, user-based filtering should give better results. But in this notebook we will test our models with both methods.\n",
     "\n",
     "## B.1 - Slope One\n",
-    "Slope One is a collaborative filtering algorithm designed for recommendations. It's lightweight and simple conception permits to compute the average difference between the user's items rating and use this information to predict the potential user rating of an unseen item."
+    "Slope One is a collaborative filtering algorithm designed for recommendations. Its lightweight and simple design calculates the average difference between the user's items rating and uses this information to predict the user's potential rating on an unseen article."
    ]
   },
   {
@@ -1263,9 +1260,7 @@
    "metadata": {},
    "source": [
     "## B.2 - KNN Basic\n",
-    "KNN Basic (K-Nearest Neighbors) is an algorithm used for recommandation systems.\n",
-    "It consists in finding the \"K\" most similar items or users based on a similarity metric (like Pearson correlation). Then calculate the weighted average of the found items ratings according to the target user or item.\n",
-    "Finally, we use these informations to predict the user's rating for the target item or to recommend items based on the user."
+    "KNN Basic (K-Nearest Neighbors) is another collaborative filtering algorithm used for recommandation systems. It consists of finding the most similar \"K\" items or users based on a similarity metric. It then calculates the weighted average of the ratings of the items found to predict the user's rating for the target item or recommend items based on the user."
    ]
   },
   {
@@ -1343,7 +1338,7 @@
    "metadata": {},
    "source": [
     "## B.3 - KNN With Means\n",
-    "KNN With Means is a variation fot the KNN Basic algorithm. This time, we adjust the weighted average calculated before by adding the overall mean rating of the user or the item to the calculated weighted average. Then, we use this new information to predict the user's rating for the target item or to recommend items to the user."
+    "KNN With Means is a variant of the KNN Basic algorithm. This time, the algorithm adjusts the previously calculated weighted average by adding the overall average user or article rating."
    ]
   },
   {
@@ -1421,10 +1416,10 @@
    "metadata": {},
    "source": [
     "## B.4 - KNN With Z-Score\n",
-    "KNN With Z-Score is another variation of the KNN algorithm that considers the mean ratings and standard deviations of users of items for predictions.\n",
-    "In addition to the previous steps, we calculate the Z-Score by substracting the mean rating and divide the result by the standard deviation on the calculated weighted average of the items or users.\n",
+    "*(KNN With Z-Score is another variation of the KNN algorithm that considers the mean ratings and standard deviations of users of items for predictions.\n",
+    "In addition to the previous steps, we calculate the Z-Score by substracting the mean rating and divide the result by the standard deviation on the calculated weighted average of the items or users.)*\n",
     "\n",
-    "With this method, this algorithm normalizes ratings by the tendencies and variabilities, meaning a better accuracy for predictions and recommendations."
+    "*(With this method, this algorithm normalizes ratings by the tendencies and variabilities, meaning a better accuracy for predictions and recommendations.)*"
    ]
   },
   {
@@ -1501,8 +1496,8 @@
    "metadata": {},
    "source": [
     "## B.5 - KNN Baseline\n",
-    "KNN Baseline is more simplier than the previous algorithm. We proceed to calculate the \"distance\" between raw values of the features we want to use for our prediction.\n",
-    "The counterpart of this method is the lose of accuracy depending of the features scales or ranges."
+    "*(KNN Baseline is more simplier than the previous algorithm. We proceed to calculate the \"distance\" between raw values of the features we want to use for our prediction.\n",
+    "The counterpart of this method is the lose of accuracy depending of the features scales or ranges.)*"
    ]
   },
   {
@@ -1584,9 +1579,9 @@
    "metadata": {},
    "source": [
     "## B.6 - Non-negative Matrix Factorization\n",
-    "NMF is a data analyzing technique used to ease the interpretation of non-negative matrices of datas. For that, try to find a way to the represent the data of a non-negative matrix (X) in smaller non-negative matrices (W and H). By doing this, we can understand with more ease more complex data structures, and we can also get back the original matrix with the basis vectors of the W matrix and the coefficients found in the H matrix.\n",
+    "*(NMF is a data analyzing technique used to ease the interpretation of non-negative matrices of datas. For that, try to find a way to the represent the data of a non-negative matrix (X) in smaller non-negative matrices (W and H). By doing this, we can understand with more ease more complex data structures, and we can also get back the original matrix with the basis vectors of the W matrix and the coefficients found in the H matrix.)*\n",
     "\n",
-    "A classic example of use is for image processing. We decompose an image into different parts that we can use to compress the image or to get some specific features."
+    "*(A classic example of use is for image processing. We decompose an image into different parts that we can use to compress the image or to get some specific features.)*"
    ]
   },
   {
@@ -1648,9 +1643,7 @@
    "metadata": {},
    "source": [
     "## B.7 - Co-clustering\n",
-    "The goal of Co-clustering is to find a way to group similar rows and columns of a matrix together, like patterns, to make them more apparent. This method is useful when working on datasets with complex rows and columns relationships.\n",
-    "\n",
-    "A simple steps explications is that we first find correlation between rows and columns, use the k-mean method to group the data and finally be able to understand the relationship between rows and columns."
+    "The goal of Co-clustering is to find a way to group similar rows and columns of a matrix, like patterns, to make them more apparent. This method is useful when working on datasets with complex row and column relationships. The algorithm will first find a correlation between the rows and columns of the dataset. It will then use the k-mean method to group the data before interpreting the results."
    ]
   },
   {
@@ -1716,20 +1709,22 @@
    "metadata": {},
    "source": [
     "## B.8 - Comparing performance\n",
-    "Before comparing all of the previous results, lets define the important terms we must understand to read properly the informations.\n",
+    "Before we compare all of the previous results, let's define a few important terms that we need to understand to properly compare the performance of our models.\n",
     "\n",
-    "First, we have the \"Best params\" property which represent the optimal combination of parameters for the model.\n",
-    "Then, we have the RMSE (Root Mean Squared Error), this is a measure of the average deviation of the predicted values of the model.\n",
-    "The MAE (Mean Absolute Error) show us the average absolute difference between the values provided and the predicted values.\n",
-    "Hit rate is an important notion, it's the proportion of recommended items that are relevant to the user, expressed in percent.\n",
-    "Hit rate per rating value is the hit rate (in percent) for each possible rating value. (accordingly to the dataset, the range is 0-10)\n",
-    "Cumulative hit rate is the hit rate calculated for all rating values up to a certain threshold.\n",
-    "Average reciprocal hit rate is the average of the reciprocal ranks of the relevant items in the recommended list.\n",
-    "User coverage is the proportion of users for whom the system is able to make recommendations.\n",
-    "Diversity is the variety or dissimilarity of items recommended to users.\n",
-    "Finally, novelty is the degree to which recommended items are new or unexpected to the user.\n",
+    "<u>Machine Learning metrics:</u>\n",
+    "- Root Mean Squared Error (RMSE): measure of the average deviation of the predicted values of the model. The lower, the better.\n",
+    "- Mean Absolute Error (MAE): refers to the magnitude of difference between the prediction of an observation and the true value of that observation.\n",
     "\n",
-    "Now that we have the notions, we can compare individualy the models. We are going to observe which is the best model for each metrics, and then conclude on the overall best model.\n",
+    "<u>Recommendation systems metrics:</u>\n",
+    "- Hit rate: the proportion of recommended items that are relevant to the user, expressed in percent.\n",
+    "- Hit rate per rating value: is the hit rate but calculated independently for each of the possible ratings (from one to ten in our case).\n",
+    "- Cumulative hit rate: is also the hit rate calculated for all rating values up to a certain threshold.\n",
+    "- Average reciprocal hit rank (ARHR): is the average of the reciprocal ranks of the relevant items in the recommended list.\n",
+    "- User coverage: is the proportion of users for whom the system is able to make recommendations.\n",
+    "- Diversity: is the variety or dissimilarity of items recommended to users.\n",
+    "- Novelty: is the degree to which recommended items are new or unexpected to the user.\n",
+    "\n",
+    "We can now compare our models. We are going to observe which is the best model for each metrics, and then conclude on the overall best model.\n",
     "\n",
     "The model with the best RMSE, MAE and Hit rate is KNN Baseline.\n",
     "The model with the highest average reciprocal hit rate is KNN With Means.\n",
