--- a/5MLRE/Project/notebooks/en/4-Appendix.ipynb
+++ b/5MLRE/Project/notebooks/en/4-Appendix.ipynb
@@ -43,7 +43,7 @@
     "### A.1 - Subject introduction\n",
     "As a reminder, this exam is to be taken in groups of no more than four students.\n",
     "\n",
-    "You must download and use the following dataset: anime.zip (source: [Kaggle](https://www.kaggle.com/).\n",
+    "You must download and use the following dataset: anime.zip (source: [Kaggle](https://www.kaggle.com/)).\n",
     "\n",
     "Here is the meaning of the different variables:\n",
     "- For the `anime.csv` dataset:\n",
