5MLRE: Content-based filtering : Typo fix

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -1416,10 +1416,7 @@
    "metadata": {},
    "source": [
     "## B.4 - KNN With Z-Score\n",
-    "*(KNN With Z-Score is another variation of the KNN algorithm that considers the mean ratings and standard deviations of users of items for predictions.\n",
-    "In addition to the previous steps, we calculate the Z-Score by substracting the mean rating and divide the result by the standard deviation on the calculated weighted average of the items or users.)*\n",
-    "\n",
-    "*(With this method, this algorithm normalizes ratings by the tendencies and variabilities, meaning a better accuracy for predictions and recommendations.)*"
+    "KNN With Z-Score is another variant of the KNN algorithm that takes into account the average ratings and standard deviations of users or items for predictions. In addition to the previous steps, the algorithm calculates the Z-Score by subtracting the average score and dividing the result by the standard deviation on the weighted average. With this method, this algorithm normalizes the ratings by trends and variabilities, which means better accuracy for predictions and recommendations."
    ]
   },
   {
@@ -1496,8 +1493,7 @@
    "metadata": {},
    "source": [
     "## B.5 - KNN Baseline\n",
-    "*(KNN Baseline is more simplier than the previous algorithm. We proceed to calculate the \"distance\" between raw values of the features we want to use for our prediction.\n",
-    "The counterpart of this method is the lose of accuracy depending of the features scales or ranges.)*"
+    "KNN Baseline is simpler than the previous algorithm. It calculates the distance between the raw values of the features that we want to use for our prediction. The counterpart of this method is the loss of accuracy depending to the scales or ranges of the features."
    ]
   },
   {
@@ -1579,9 +1575,9 @@
    "metadata": {},
    "source": [
     "## B.6 - Non-negative Matrix Factorization\n",
-    "*(NMF is a data analyzing technique used to ease the interpretation of non-negative matrices of datas. For that, try to find a way to the represent the data of a non-negative matrix (X) in smaller non-negative matrices (W and H). By doing this, we can understand with more ease more complex data structures, and we can also get back the original matrix with the basis vectors of the W matrix and the coefficients found in the H matrix.)*\n",
+    "Non-negative Matrix Factorization (NMF) is a technique used to facilitate the interpretation of non-negative matrices*¹* of data. For this, the algorithm tries to find a way to represent a non-negative matrix in smaller non-negative matrices. It can then better interpret the data structures and its predictions are improved.\n",
     "\n",
-    "*(A classic example of use is for image processing. We decompose an image into different parts that we can use to compress the image or to get some specific features.)*"
+    "*1: A non-negative matrix is a matrix where all elements are greater than or equal to zero.*"
    ]
   },
   {
@@ -1709,7 +1705,7 @@
    "metadata": {},
    "source": [
     "## B.8 - Comparing performance\n",
-    "Before we compare all of the previous results, let's define a few important terms that we need to understand to properly compare the performance of our models.\n",
+    "Before we compare all the previous results, let's define a few important terms that we need to understand to properly compare the performance of our models.\n",
     "\n",
     "<u>Machine Learning metrics:</u>\n",
     "- Root Mean Squared Error (RMSE): measure of the average deviation of the predicted values of the model. The lower, the better.\n",
@@ -1726,10 +1722,9 @@
     "\n",
     "We can now compare our models. We are going to observe which is the best model for each metrics, and then conclude on the overall best model.\n",
     "\n",
-    "The model with the best RMSE, MAE and Hit rate is KNN Baseline.\n",
-    "The model with the highest average reciprocal hit rate is KNN With Means.\n",
-    "The model with the highest diversity is KNN With Means.\n",
-    "The model with the highest novelty is Slope One."
+    "The model with the most interesting metric values is the KNN Baseline due to its good performance on RMSE, MAE and hit rate. It has a reasonable training time of seven seconds. Even though the grid search takes three hours, we already have the best parameters for this model, so we don't need to run the grid search again. In another hand, KNN With Means show us an interesting performance for ARHR and a training of three seconds. KNN Basic is automatically excluded because 35% of its predictions were impossible (one of the parameters was unknown to it).\n",
+    "\n",
+    "Overall, based on the metrics and results we have at this moment of the training, KNN Baseline appears to be the most efficient model."
    ]
   },
   {
